GP-4855: Adding new fields and copy specials for various types of address offsets