@@ -19,37 +19,34 @@ import ghidra.app.util.ListingHighlightProvider;
 import ghidra.app.util.viewer.format.FieldFormatModel;
 import ghidra.framework.options.Options;
 import ghidra.framework.options.ToolOptions;
-import ghidra.program.database.mem.FileBytes;
 import ghidra.program.model.address.Address;
 import ghidra.program.model.listing.CodeUnit;
-import ghidra.program.model.mem.MemoryBlock;
-import ghidra.program.model.mem.MemoryBlockSourceInfo;
 import ghidra.program.util.OffsetFieldType;
 
 /**
- *  Generates Function Offset fields
+ *  Generates Imagebase Offset fields
  */
-public class FileOffsetFieldFactory extends AbstractOffsetFieldFactory {
+public class ImagebaseOffsetFieldFactory extends AbstractOffsetFieldFactory {
 
-	private static final String FIELD_OFFSET_DESCRIPTION = "File";
-	private static final String FIELD_NAME_DESCRIPTION = "File";
+	private static final String FIELD_OFFSET_DESCRIPTION = "Imagebase";
+	private static final String FIELD_NAME_DESCRIPTION = "Field";
 
 	/**
-	 * Creates a new default {@link FileOffsetFieldFactory}
+	 * Creates a new default {@link ImagebaseOffsetFieldFactory}
 	 */
-	public FileOffsetFieldFactory() {
+	public ImagebaseOffsetFieldFactory() {
 		super(FIELD_OFFSET_DESCRIPTION);
 	}
 
 	/**
-	 * Creates a new {@link FileOffsetFieldFactory}
+	 * Creates a new {@link ImagebaseOffsetFieldFactory}
 	 * 
 	 * @param model the {@link FieldFormatModel} that the field belongs to
 	 * @param hlProvider the {@link ListingHighlightProvider}
 	 * @param displayOptions the {@link Options} for display properties
 	 * @param fieldOptions the {@link Options} for field specific properties
 	 */
-	private FileOffsetFieldFactory(FieldFormatModel model, ListingHighlightProvider hlProvider,
+	private ImagebaseOffsetFieldFactory(FieldFormatModel model, ListingHighlightProvider hlProvider,
 			Options displayOptions, Options fieldOptions) {
 		super(FIELD_OFFSET_DESCRIPTION, FIELD_NAME_DESCRIPTION, model, hlProvider, displayOptions,
 			fieldOptions);
@@ -59,25 +56,20 @@ public class FileOffsetFieldFactory extends AbstractOffsetFieldFactory {
 	public FieldFactory newInstance(FieldFormatModel formatModel,
 			ListingHighlightProvider highlightProvider, ToolOptions options,
 			ToolOptions fieldOptions) {
-		return new FileOffsetFieldFactory(formatModel, highlightProvider, options, fieldOptions);
+		return new ImagebaseOffsetFieldFactory(formatModel, highlightProvider, options,
+			fieldOptions);
 	}
 
 	@Override
 	public String getOffsetValue(CodeUnit cu) {
 		Address addr = cu.getAddress();
-		MemoryBlock block = cu.getProgram().getMemory().getBlock(addr);
+		Address imagebase = cu.getProgram().getImageBase();
 		String text = "";
-		for (MemoryBlockSourceInfo sourceInfo : block.getSourceInfos()) {
-			if (sourceInfo.contains(addr)) {
-				if (sourceInfo.getFileBytes().isPresent()) {
-					FileBytes fileBytes = sourceInfo.getFileBytes().get();
-					long offset = sourceInfo.getFileBytesOffset(addr);
-					text = String.format(useHex ? "0x%x" : "%d", offset);
-					if (showName) {
-						text = "%s:%s".formatted(fileBytes.getFilename(), text);
-					}
-					break;
-				}
+		if (addr.hasSameAddressSpace(imagebase)) {
+			long imagebaseOffset = addr.subtract(cu.getProgram().getImageBase());
+			text = String.format(useHex ? "0x%x" : "%d", imagebaseOffset);
+			if (showName) {
+				text = "imagebase:%s".formatted(text);
 			}
 		}
 		return text;
@@ -85,6 +77,6 @@ public class FileOffsetFieldFactory extends AbstractOffsetFieldFactory {
 
 	@Override
 	public OffsetFieldType getOffsetFieldType() {
-		return OffsetFieldType.FILE;
+		return OffsetFieldType.IMAGEBASE;
 	}
 }
